New styles and a button

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     </head>
     <body>
         <header>
-            <h1>This is my blogpost!</h1>
+            <h1>This is my website!</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
                 voluptate vitae ut officiis, ducimus error sequi ipsum aliquid
                 sint nesciunt perferendis, blanditiis fuga! Cum, in? Deleniti
                 accusamus assumenda nesciunt sequi.
             </p>
+            <button>click me!</button>
         </header>
     </body>
 </html>
