the start of the blogpost

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
     </head>
     <body>
         <header>
-            <h1>This is my website!</h1>
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Social</li>
+                </ul>
+            </nav>
+            <h1>A new experience</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-                voluptate vitae ut officiis, ducimus error sequi ipsum aliquid
-                sint nesciunt perferendis, blanditiis fuga! Cum, in? Deleniti
-                accusamus assumenda nesciunt sequi.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Doloribus ullam voluptatum maiores laboriosam reprehenderit
+                odio, nostrum quae nobis, repellat dicta excepturi ea aperiam!
+                Asperiores, autem porro. Nulla quasi praesentium excepturi?
             </p>
-            <button>click me!</button>
+            <button>show me more!</button>
         </header>
     </body>
 </html>
