first styles to nav

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                     <li>Contact</li>
                     <li>Social</li>
                 </ul>
+                <ul>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                </ul>
             </nav>
             <h1>A new experience</h1>
             <p>
