first post and another font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My blogpost</title>
         <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
@@ -25,5 +31,21 @@
             </p>
             <button>show me more!</button>
         </header>
+        <section>
+            <h2>You know how?</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                nobis provident necessitatibus ad quidem, labore repellat quod?
+                Blanditiis temporibus non est nobis molestiae minima, vero
+                voluptatum quas ipsa, sint recusandae. Magnam perspiciatis id
+                odio est quaerat aperiam autem, harum ducimus officiis ea
+                obcaecati, eos culpa ullam eius facere magni reiciendis beatae
+                doloribus praesentium maxime. Dolore mollitia natus nesciunt
+                ducimus hic. Natus, laudantium autem? Rerum dolorem placeat
+                repellat optio quae veniam, nam ea reiciendis neque aperiam
+                blanditiis voluptates pariatur commodi impedit ex culpa sed
+                nihil eligendi. Hic et necessitatibus dolorem pariatur.
+            </p>
+        </section>
     </body>
 </html>
