--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My blogpost</title>
         <link rel="stylesheet" href="styles.css" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&family=Playfair+Display:ital@0;1&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
             <nav>
+                <p class="logo">のすべ</p>
                 <ul>
                     <li>About</li>
                     <li>Contact</li>
