changing secondary title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button>show me more!</button>
         </header>
         <section>
-            <h2>You know how?</h2>
+            <h2>Have you ever tried?</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
                 nobis provident necessitatibus ad quidem, labore repellat quod?
