new section and styles for it

--- a/index.html
+++ b/index.html
@@ -54,5 +54,21 @@
                 nihil eligendi. Hic et necessitatibus dolorem pariatur.
             </p>
         </section>
+        <section class="new-world">
+            <h2>The start of a new world</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                nobis provident necessitatibus ad quidem, labore repellat quod?
+                Blanditiis temporibus non est nobis molestiae minima, vero
+                voluptatum quas ipsa, sint recusandae. Magnam perspiciatis id
+                odio est quaerat aperiam autem, harum ducimus officiis ea
+                obcaecati, eos culpa ullam eius facere magni reiciendis beatae
+                doloribus praesentium maxime. Dolore mollitia natus nesciunt
+                ducimus hic. Natus, laudantium autem? Rerum dolorem placeat
+                repellat optio quae veniam, nam ea reiciendis neque aperiam
+                blanditiis voluptates pariatur commodi impedit ex culpa sed
+                nihil eligendi. Hic et necessitatibus dolorem pariatur.
+            </p>
+        </section>
     </body>
 </html>
